<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray_efefef"
    android:orientation="vertical">

    <com.dawoo.lotterybox.view.view.HeaderView
        android:id="@+id/head_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/user_name_icon" />

        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_height"
            android:background="@color/transparent"
            android:hint="@string/input_user_name"
            android:paddingStart="20dp"
            android:textSize="@dimen/text_14_sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray_EEEEEE" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingStart="10dp">

        <ImageView
            android:id="@+id/user_pwd_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/user_pwd_icon" />

        <EditText
            android:id="@+id/pwd_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_height"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/user_pwd_iv"
            android:layout_toStartOf="@+id/input_type_iv"
            android:background="@color/transparent"
            android:hint="@string/input_user_pwd"
            android:paddingStart="20dp"
            android:textSize="@dimen/text_14_sp"
            android:inputType="textPassword"/>

        <ImageView
            android:id="@+id/input_type_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/input_type_icon_selector" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/forget_pwd_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/foget_pwd"
            android:textColor="@color/color_gray_666666"
            android:textSize="@dimen/text_12_sp" />
    </FrameLayout>


    <Button
        android:id="@+id/login_btn"
        style="@style/common_btn_style"
        android:text="@string/title_name_activity_login" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_corn_bg_white"
        android:text="@string/title_name_activity_register"
        android:textColor="@color/color_gray_333333"
        android:textSize="@dimen/text_14_sp" />


</LinearLayout>