<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableLeft="@mipmap/img_user"
        android:drawablePadding="@dimen/dp_10"
        android:text="saber0"
        android:textSize="@dimen/text_16_sp"
        android:textColor="@color/assistant_popup_text"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_15"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/assistant_popup_text"/>

    <TextView
        android:id="@+id/tv_balance"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableLeft="@mipmap/img_pig"
        android:drawablePadding="@dimen/dp_10"
        android:text="0.00"
        android:textSize="@dimen/text_16_sp"
        android:textColor="@color/assistant_popup_text"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/assistant_popup_text"/>

    <TextView
        android:id="@+id/tv_recent_awards"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableLeft="@mipmap/img_last_open"
        android:drawablePadding="@dimen/dp_10"
        android:text="@string/recent_awards"
        android:textSize="@dimen/text_16_sp"
        android:textColor="@color/assistant_popup_text"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/assistant_popup_text"/>

    <TextView
        android:id="@+id/tv_my_bet"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableLeft="@mipmap/img_min_pop"
        android:drawablePadding="@dimen/dp_10"
        android:text="@string/my_bet"
        android:textSize="@dimen/text_16_sp"
        android:textColor="@color/assistant_popup_text"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/assistant_popup_text"/>

    <TextView
        android:id="@+id/tv_my_chase_number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableLeft="@mipmap/img_my_zuihao"
        android:drawablePadding="@dimen/dp_10"
        android:text="@string/my_chase_number"
        android:textSize="@dimen/text_16_sp"
        android:textColor="@color/assistant_popup_text"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/assistant_popup_text"/>

    <TextView
        android:id="@+id/tv_trend_chart"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableLeft="@mipmap/img_numchart"
        android:drawablePadding="@dimen/dp_10"
        android:text="@string/trend_chart"
        android:textSize="@dimen/text_16_sp"
        android:textColor="@color/assistant_popup_text"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/assistant_popup_text"/>

    <TextView
        android:id="@+id/tv_lzt_pop"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableLeft="@mipmap/img_lzt_pop"
        android:drawablePadding="@dimen/dp_10"
        android:text="@string/lzt_pop"
        android:textSize="@dimen/text_16_sp"
        android:textColor="@color/assistant_popup_text"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/assistant_popup_text"/>

    <TextView
        android:id="@+id/tv_wf_pop"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableLeft="@mipmap/img_wf_pop"
        android:drawablePadding="@dimen/dp_10"
        android:text="@string/wf_pop"
        android:textSize="@dimen/text_16_sp"
        android:textColor="@color/assistant_popup_text"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/assistant_popup_text"/>

</LinearLayout>