<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fl_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_note_tab_his"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:background="@drawable/note_button_left_selector"
                android:text="@string/note_tab_his"
                android:textColor="@color/text_color_bg_to_white_text_selector"
                android:textSize="@dimen/text_12_sp" />

            <Button
                android:id="@+id/btn_note_tab_chaseNum"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:background="@drawable/note_button_mid_selector"
                android:text="@string/note_tab_chaseNum"
                android:textColor="@color/text_color_bg_to_white_text_selector"
                android:textSize="@dimen/text_12_sp" />

            <Button
                android:id="@+id/btn_note_tab_cancelOrder"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:background="@drawable/note_button_right_selector"
                android:text="@string/note_tab_cancelOrder"
                android:textColor="@color/text_color_bg_to_white_text_selector"
                android:textSize="@dimen/text_12_sp" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fragment_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_assets"
        android:layout_below="@+id/fl_1" />

</RelativeLayout>
